Fixed video on mobile

--- a/site/styles.css
+++ b/site/styles.css
@@ -77,12 +77,6 @@ body {
     max-width: 100%;
 
 }
-@media (max-width: 820px) {
-    .grid {
-        grid-template-columns: repeat(max(1), minmax(160%, 1fr));
-    }
-}
-
 
 .thumbnail {
     width: 100%;
@@ -377,4 +371,12 @@ h3 {
     color: #fff;
 }
 
+@media (max-width: 820px) {
+    .grid {
+        grid-template-columns: repeat(max(1), minmax(160%, 1fr));
+    }
+    .video-container {
+        grid-column: span 1;
+    }
+}
 
